--- a/index.html
+++ b/index.html
@@ -1,110 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>4-Frame Dashboard</title>
-  <style>
-    html, body { height: 100%; margin: 0; }
-    .grid {
-      height: 100%;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      gap: 8px;
-      padding: 8px;
-      box-sizing: border-box;
-      background: #111;
-    }
-    .panel {
-      background: #000;
-      border-radius: 8px;
-      overflow: hidden;
-      position: relative;
-    }
-    iframe, img {
-      width: 100%;
-      height: 100%;
-      border: 0;
-      display: block;
-    }
-    img { object-fit: cover; }
-  </style>
+
+  <title>Test</title>
+  
 </head>
 <body>
-  <div class="grid">
-    <!-- Frame 1: alternating external webpages -->
-    <div class="panel">
-      <iframe id="swapFrame" title="Alternating frame"></iframe>
-    </div>
-
-    <!-- Frame 2: rotating images -->
-    <div class="panel">
-      <img id="rotatingImage" alt="Rotating slideshow" />
-    </div>
-
-    <!-- Frame 3: static external webpage -->
-    <div class="panel">
-      <iframe id="staticA" title="Static frame A"></iframe>
-    </div>
-
-    <!-- Frame 4: static external webpage -->
-    <div class="panel">
-      <iframe id="staticB" title="Static frame B"></iframe>
-    </div>
-  </div>
-
-  <script>
-    // --- CONFIG ---
-    // Frame 1: swap between these two URLs every 20 seconds
-    const swapUrls = [
-      "Ontario-1769876591144.json",
-      "https://skelectricity.info/d/a2f504c8-ea84-454b-b3ee-cb237a072050/quebec?orgId=1&from=now-24h&to=now&timezone=America%2FToronto",
-      "https://skelectricity.info/d/ca58b2af-3ec2-45e6-a3ff-75b7dfccb5b9/ontario?orgId=1&from=now-24h&to=now&timezone=America%2FRegina"
-    ];
-    const swapEveryMs = 20_000;
-
-    // Frame 2: rotate through these 8 images every 5 seconds
-    const imageUrls = [
-      "images/1.jpg",
-      "images/2.jpg",
-      "images/3.jpg",
-      "images/4.jpg",
-      "images/5.jpg",
-      "images/6.jpg",
-      "images/7.jpg",
-      "images/8.jpg"
-    ];
-    const imageEveryMs = 5_000;
-
-    // Frames 3 & 4: static iframes
-    const staticUrlA = "https://news.ycombinator.com";
-    const staticUrlB = "https://www.bbc.com";
-    // --- END CONFIG ---
-
-    // Frame 1 logic
-    const swapFrame = document.getElementById("swapFrame");
-    let swapIndex = 0;
-    function setSwapSrc() {
-      swapFrame.src = swapUrls[swapIndex % swapUrls.length];
-      swapIndex++;
-    }
-    setSwapSrc();
-    setInterval(setSwapSrc, swapEveryMs);
-
-    // Frame 2 logic
-    const img = document.getElementById("rotatingImage");
-    let imgIndex = 0;
-    function setImgSrc() {
-      img.src = imageUrls[imgIndex % imageUrls.length];
-      imgIndex++;
-    }
-    setImgSrc();
-    setInterval(setImgSrc, imageEveryMs);
-
-    // Static frames
-    document.getElementById("staticA").src = staticUrlA;
-    document.getElementById("staticB").src = staticUrlB;
-  </script>
+  Test Test
 </body>
 </html>
