--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   
 </head>
 <body>
-  Test Test
+<iframe src="https://skelectricity.info/d-solo/a2f504c8-ea84-454b-b3ee-cb237a072050/quebec?orgId=1&from=now-24h&to=now&timezone=America%2FToronto&panelId=panel-9&__feature.dashboardSceneSolo=true" width="450" height="200" frameborder="0"></iframe>
 </body>
 </html>
