--- a/test.html
+++ b/test.html
@@ -66,16 +66,18 @@
 
     // Frame 2: rotate through these 8 images every 5 seconds
     const imageUrls = [
-      "images/1.jpg",
-      "images/2.jpg",
-      "images/3.jpg",
-      "images/4.jpg",
-      "images/5.jpg",
-      "images/6.jpg",
-      "images/7.jpg",
-      "images/8.jpg"
+      "images/1.png",
+      "images/2.png",
+      "images/3.png",
+      "images/4.png",
+      "images/4a.png",
+      "images/5.png",
+      "images/6.png",
+      "images/7.png",
+      "images/8.png",
+      "images/9.png"
     ];
-    const imageEveryMs = 5_000;
+    const imageEveryMs = 1_000;
 
     // Frames 3 & 4: static iframes
     const staticUrlA = "https://news.ycombinator.com";
