--- a/test.html
+++ b/test.html
@@ -58,7 +58,7 @@
     // --- CONFIG ---
     // Frame 1: swap between these two URLs every 20 seconds
     const swapUrls = [
-      "https://skelectricity.info/d-solo/b549c548-2a30-4d5c-a24a-e37cc3095a7e/daily-stats-v3?orgId=1&from=1769273304470&to=1769878104470&timezone=America%2FRegina&panelId=panel-9&__feature.dashboardSceneSolo=true" width="450" height="200" frameborder="0"",
+      "https://skelectricity.info/goto/efbvwrh6wgjr4a?orgId=1",
       "https://skelectricity.info/d/a2f504c8-ea84-454b-b3ee-cb237a072050/quebec?orgId=1&from=now-24h&to=now&timezone=America%2FToronto",
       "https://skelectricity.info/d/ca58b2af-3ec2-45e6-a3ff-75b7dfccb5b9/ontario?orgId=1&from=now-24h&to=now&timezone=America%2FRegina"
     ];
@@ -66,15 +66,16 @@
 
     // Frame 2: rotate through these 8 images every 5 seconds
     const imageUrls = [
-      "1.png",
-      "2.png",
-      "3.png",
-      "4.png",
-      "5.png",
-      "6.png",
-      "7.png",
-      "8.png",
-      "9.png"
+     "images/1.png",
+      "images/2.png",
+      "images/3.png",
+      "images/4.png",
+      "images/4a.png",
+      "images/5.png",
+      "images/6.png",
+      "images/7.png",
+      "images/8.png",
+      "images/9.png"
     ];
     const imageEveryMs = 1_000;
 
