--- a/test.html
+++ b/test.html
@@ -66,16 +66,15 @@
 
     // Frame 2: rotate through these 8 images every 5 seconds
     const imageUrls = [
-     "images/1.png",
-      "images/2.png",
-      "images/3.png",
-      "images/4.png",
-      "images/4a.png",
-      "images/5.png",
-      "images/6.png",
-      "images/7.png",
-      "images/8.png",
-      "images/9.png"
+      "1.png",
+      "2.png",
+      "3.png",
+      "4.png",
+      "5.png",
+      "6.png",
+      "7.png",
+      "8.png",
+      "9.png"
     ];
     const imageEveryMs = 1_000;
 
